@@ -18,18 +18,18 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * 行政区划服务实现（GEO-001 / platform-geo-service）。
  * <p>实现 {@link GeoService}：多语言 displayName、树组装、祖先链、国家维度前缀搜索。
- * 数据访问经 {@link GeoDataCache} 走三级缓存（L1 Caffeine → L2 Redis → L3 DB），只读无事务。
- * countries 列表默认不含 icon_base64；search 强制国家 + 前缀匹配。</p>
+ * 数据访问经 {@link GeoDataCache} 走三级缓存（L1 Caffeine → L2 Redis → L3 DB），只读无事务。</p>
  */
 @Service
 public class GeoServiceImpl implements GeoService {
@@ -38,188 +38,98 @@ public class GeoServiceImpl implements GeoService {
 
     private final GeoDataCache geoDataCache;
 
-    /**
-     * 注入依赖构造。
-     *
-     * @param geoDataCache 地理数据缓存门面
-     */
     public GeoServiceImpl(GeoDataCache geoDataCache) {
         this.geoDataCache = geoDataCache;
     }
 
-    /**
-     * 查询启用国家列表，支持语言与关键词过滤。
-     *
-     * @param lang    语言偏好（local/en/zh，可空）
-     * @param keyword 关键词，可空（iso2 或名称前缀）
-     * @return 国家 VO 列表（不含大体积 iconBase64）
-     */
     @Override
     public List<CountryVO> listCountries(String lang, String keyword) {
         log.debug("listCountries start, lang={}, keyword={}", lang, keyword);
-        String kw = trimToNull(keyword);
-        if (kw != null) {
-            if (kw.length() > 64 || kw.length() < 1
-                    || kw.indexOf('%') >= 0 || kw.indexOf('_') >= 0) {
-                throw new BizException(ErrorCode.PARAM_INVALID);
-            }
-            if (kw.length() == 2) {
-                kw = kw.toUpperCase();
-            }
-        }
-        List<GeoCountry> list = geoDataCache.listCountries(kw);
-        List<CountryVO> result = new ArrayList<>(list.size());
-        for (GeoCountry c : list) {
-            result.add(toCountryVO(c, lang));
-        }
+        String kw = normalizeCountryKeyword(keyword);
+        List<CountryVO> result = geoDataCache.listCountries(kw).stream()
+                .map(c -> toCountryVO(c, lang))
+                .toList();
         log.debug("listCountries end, size={}", result.size());
         return result;
     }
 
-    /**
-     * 按父节点 ID 查询直属子行政区划列表。
-     *
-     * @param parentId 父节点 ID（必填，&gt;0）
-     * @param lang     语言偏好（local/en/zh，可空）
-     * @return 子级区划 VO 列表（含 isLeaf）
-     */
     @Override
     public List<RegionVO> listChildren(Long parentId, String lang) {
         log.debug("listChildren start, parentId={}, lang={}", parentId, lang);
-        if (parentId == null || parentId <= 0) {
-            throw new BizException(ErrorCode.PARAM_INVALID);
-        }
-        // listChildren 内部校验父节点；加载时会回填 region 缓存，下方 find 命中 L1
-        List<GeoRegion> children = geoDataCache.listChildren(parentId);
-        GeoRegion parent = geoDataCache.findEnabledById(parentId);
-        children = geoDataCache.preferNextLevel(parent, children);
+        requirePositiveId(parentId);
+        List<GeoRegion> children = geoDataCache.preferNextLevel(
+                geoDataCache.findEnabledById(parentId),
+                geoDataCache.listChildren(parentId));
         Map<Long, Integer> childCounts = countChildMap(children);
-        List<RegionVO> result = new ArrayList<>(children.size());
-        for (GeoRegion r : children) {
-            RegionVO vo = toRegionVO(r, lang);
-            // isLeaf 以实际是否有子节点为准，不写死 3/4/5 级
-            vo.setIsLeaf(childCounts.getOrDefault(r.getId(), 0) == 0);
-            result.add(vo);
-        }
+        List<RegionVO> result = children.stream()
+                .map(r -> {
+                    RegionVO vo = toRegionVO(r, lang);
+                    vo.setIsLeaf(childCounts.getOrDefault(r.getId(), 0) == 0);
+                    return vo;
+                })
+                .toList();
         log.debug("listChildren end, parentId={}, size={}", parentId, result.size());
         return result;
     }
 
-    /**
-     * 批量统计各区划节点的启用子节点数量，用于判定 isLeaf。
-     *
-     * @param regions 待统计的区划列表
-     * @return parentId → 子节点数；空入参返回空 Map
-     */
     private Map<Long, Integer> countChildMap(List<GeoRegion> regions) {
         if (regions == null || regions.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
-        List<Long> ids = new ArrayList<>(regions.size());
-        for (GeoRegion r : regions) {
-            ids.add(r.getId());
-        }
-        return geoDataCache.countChildren(ids);
+        return geoDataCache.countChildren(regions.stream().map(GeoRegion::getId).toList());
     }
 
-    /**
-     * 按国家编码（及可选根节点、深度）组装行政区划树。
-     *
-     * @param countryCode 国家 ISO2 编码
-     * @param rootId      根节点 ID，可空
-     * @param depth       深度限制 1~5，可空
-     * @param lang        语言偏好（local/en/zh，可空）
-     * @return 树根节点（含嵌套 children）
-     */
     @Override
     public RegionTreeVO getTree(String countryCode, Long rootId, Integer depth, String lang) {
         log.debug("getTree start, countryCode={}, rootId={}, depth={}, lang={}", countryCode, rootId, depth, lang);
         GeoDataCache.TreeLoadResult loaded = geoDataCache.loadTreeNodes(countryCode, rootId, depth);
-        RegionTreeVO tree = buildTree(loaded.getNodes(), loaded.getRoot().getId(), lang);
+        RegionTreeVO tree = buildTree(loaded.nodes(), loaded.root().getId(), lang);
         if (tree == null) {
-            tree = toRegionTreeVO(loaded.getRoot(), lang);
+            tree = toRegionTreeVO(loaded.root(), lang);
         }
-        log.debug("getTree end, countryCode={}, nodeCount={}", countryCode, loaded.getNodes().size());
+        log.debug("getTree end, countryCode={}, nodeCount={}", countryCode, loaded.nodes().size());
         return tree;
     }
 
-    /**
-     * 按区划 ID 回显从国家到当前节点的有序祖先链。
-     *
-     * @param id   区划 ID
-     * @param lang 语言偏好（local/en/zh，可空）
-     * @return 祖先链（国家→…→当前）
-     */
     @Override
     public List<RegionVO> getPath(Long id, String lang) {
         log.debug("getPath start, id={}, lang={}", id, lang);
-        if (id == null || id <= 0) {
-            throw new BizException(ErrorCode.PARAM_INVALID);
-        }
-        List<GeoRegion> regions = geoDataCache.listPathEntities(id);
-        Map<Long, GeoRegion> map = new HashMap<>();
-        for (GeoRegion r : regions) {
-            map.put(r.getId(), r);
-        }
+        requirePositiveId(id);
+        Map<Long, GeoRegion> map = geoDataCache.listPathEntities(id).stream()
+                .collect(Collectors.toMap(GeoRegion::getId, Function.identity(), (a, b) -> a, HashMap::new));
         GeoRegion current = map.get(id);
-        // 祖先链必须包含当前节点；缺失则直接失败，禁止回退到列表末元素（可能是祖先）
         if (current == null) {
             throw new BizException(ErrorCode.REGION_NOT_FOUND);
         }
         List<Long> ids = PathUtil.parsePathIds(current.getPath());
         if (ids.isEmpty()) {
-            ids = Collections.singletonList(current.getId());
+            ids = List.of(current.getId());
         }
-        List<RegionVO> path = new ArrayList<>();
-        for (Long pathId : ids) {
-            GeoRegion r = map.get(pathId);
-            if (r != null) {
-                path.add(toRegionVO(r, lang));
-            }
-        }
+        List<RegionVO> path = ids.stream()
+                .map(map::get)
+                .filter(Objects::nonNull)
+                .map(r -> toRegionVO(r, lang))
+                .toList();
+        // toList() 不可变；applyActualIsLeaf 需要可写列表
+        path = new ArrayList<>(path);
         applyActualIsLeaf(path);
         log.debug("getPath end, id={}, depth={}", id, path.size());
         return path;
     }
 
-    /**
-     * 按关键词搜索行政区划，返回命中节点及全路径名称。
-     * <p>强制 countryCode（ISO2）+ 名称前缀匹配，禁止 %/_ 通配符，避免全表扫。</p>
-     *
-     * @param keyword     关键词（必填，长度 2~64）
-     * @param countryCode 国家 ISO2 编码（必填）
-     * @param level       层级过滤，可空
-     * @param limit       返回条数上限（缺省 20，范围 1~100）
-     * @param lang        语言偏好（local/en/zh，可空）
-     * @return 搜索结果（含 fullPathName）
-     */
     @Override
     public List<RegionSearchVO> search(String keyword, String countryCode, Integer level, Integer limit, String lang) {
         log.debug("search start, keyword={}, countryCode={}, level={}, limit={}, lang={}",
                 keyword, countryCode, level, limit, lang);
-        if (!StringUtils.hasText(keyword) || keyword.trim().length() > 64) {
-            throw new BizException(ErrorCode.PARAM_INVALID);
-        }
-        String kw = keyword.trim();
-        // 最短 2 字；禁止通配符，避免人为构造慢查询
-        if (kw.length() < 2 || kw.indexOf('%') >= 0 || kw.indexOf('_') >= 0) {
-            throw new BizException(ErrorCode.PARAM_INVALID);
-        }
-        int lim = limit == null ? 20 : limit;
-        if (lim < 1 || lim > 100) {
-            throw new BizException(ErrorCode.PARAM_INVALID);
-        }
-        // 强制国家维度 + 前缀匹配，避免全球/前导模糊全表扫
-        if (!StringUtils.hasText(countryCode) || countryCode.trim().length() != 2) {
-            throw new BizException(ErrorCode.PARAM_INVALID);
-        }
-        String code = countryCode.trim().toUpperCase();
+        String kw = requireSearchKeyword(keyword);
+        int lim = resolveLimit(limit);
+        String code = requireIso2(countryCode);
         List<GeoRegion> hits = geoDataCache.search(kw, code, level, lim);
         if (hits.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         Map<Long, GeoRegion> ancestorCache = new HashMap<>();
-        List<RegionSearchVO> result = new ArrayList<>();
+        List<RegionSearchVO> result = new ArrayList<>(hits.size());
         for (GeoRegion hit : hits) {
             RegionSearchVO vo = toRegionSearchVO(hit, lang);
             vo.setFullPathName(buildFullPathName(hit, lang, ancestorCache));
@@ -230,50 +140,26 @@ public class GeoServiceImpl implements GeoService {
         return result;
     }
 
-    /**
-     * 按物化 path 组装命中节点的全路径展示名（lang 选取各层名称）。
-     *
-     * @param hit           命中区划
-     * @param lang          语言偏好
-     * @param ancestorCache 祖先实体缓存，跨多次命中复用，减少批量查库
-     * @return 以 / 连接的全路径名称
-     */
     private String buildFullPathName(GeoRegion hit, String lang, Map<Long, GeoRegion> ancestorCache) {
         List<Long> ids = PathUtil.parsePathIds(hit.getPath());
-        List<Long> missing = new ArrayList<>();
-        for (Long id : ids) {
-            if (!ancestorCache.containsKey(id)) {
-                missing.add(id);
-            }
-        }
+        List<Long> missing = ids.stream().filter(id -> !ancestorCache.containsKey(id)).toList();
         if (!missing.isEmpty()) {
-            for (GeoRegion r : geoDataCache.listByIds(missing)) {
-                ancestorCache.put(r.getId(), r);
-            }
+            geoDataCache.listByIds(missing).forEach(r -> ancestorCache.put(r.getId(), r));
         }
-        List<String> names = new ArrayList<>();
-        for (Long id : ids) {
-            GeoRegion r = ancestorCache.get(id);
-            if (r != null) {
-                names.add(LangUtil.resolveDisplayName(lang, r.getName(), r.getNameEn(), r.getNameCh()));
-            }
-        }
-        return String.join("/", names);
+        return ids.stream()
+                .map(ancestorCache::get)
+                .filter(Objects::nonNull)
+                .map(r -> LangUtil.resolveDisplayName(lang, r.getName(), r.getNameEn(), r.getNameCh()))
+                .collect(Collectors.joining("/"));
     }
 
-    /**
-     * 将扁平节点列表组装为以 rootId 为根的树。
-     *
-     * @param nodes  扁平节点（含根）
-     * @param rootId 树根 ID
-     * @param lang   语言偏好
-     * @return 树根 VO；若根不在列表中则返回 null
-     */
     private RegionTreeVO buildTree(List<GeoRegion> nodes, Long rootId, String lang) {
-        Map<Long, RegionTreeVO> map = new LinkedHashMap<>();
-        for (GeoRegion node : nodes) {
-            map.put(node.getId(), toRegionTreeVO(node, lang));
-        }
+        Map<Long, RegionTreeVO> map = nodes.stream()
+                .collect(Collectors.toMap(
+                        GeoRegion::getId,
+                        n -> toRegionTreeVO(n, lang),
+                        (a, b) -> a,
+                        LinkedHashMap::new));
         RegionTreeVO root = null;
         for (GeoRegion node : nodes) {
             RegionTreeVO vo = map.get(node.getId());
@@ -286,21 +172,13 @@ public class GeoServiceImpl implements GeoService {
                 parent.getChildren().add(vo);
             }
         }
-        // isLeaf 与 listChildren 对齐：以本次树内是否挂子节点为准，不用 DB is_leaf 双路径
-        for (RegionTreeVO vo : map.values()) {
+        map.values().forEach(vo -> {
             List<RegionTreeVO> children = vo.getChildren();
             vo.setIsLeaf(children == null || children.isEmpty());
-        }
+        });
         return root;
     }
 
-    /**
-     * 国家实体转 CountryVO，并按 lang 填充 displayName。
-     *
-     * @param c    国家实体
-     * @param lang 语言偏好
-     * @return 国家视图对象
-     */
     private CountryVO toCountryVO(GeoCountry c, String lang) {
         CountryVO vo = new CountryVO();
         vo.setId(c.getId());
@@ -316,80 +194,42 @@ public class GeoServiceImpl implements GeoService {
         return vo;
     }
 
-    /**
-     * 区划实体转平级 RegionVO。
-     *
-     * @param r    区划实体
-     * @param lang 语言偏好
-     * @return 区划视图对象
-     */
     private RegionVO toRegionVO(GeoRegion r, String lang) {
         RegionVO vo = new RegionVO();
         fillRegion(vo, r, lang);
         return vo;
     }
 
-    /**
-     * 区划实体转树节点 RegionTreeVO。
-     *
-     * @param r    区划实体
-     * @param lang 语言偏好
-     * @return 树节点视图对象
-     */
     private RegionTreeVO toRegionTreeVO(GeoRegion r, String lang) {
         RegionTreeVO vo = new RegionTreeVO();
         fillRegion(vo, r, lang);
         return vo;
     }
 
-    /**
-     * 区划实体转搜索结果 RegionSearchVO（fullPathName 由调用方另填）。
-     *
-     * @param r    区划实体
-     * @param lang 语言偏好
-     * @return 搜索结果视图对象
-     */
     private RegionSearchVO toRegionSearchVO(GeoRegion r, String lang) {
         RegionSearchVO vo = new RegionSearchVO();
         fillRegion(vo, r, lang);
         return vo;
     }
 
-    /**
-     * 批量按实子节点数覆盖 isLeaf，与 listChildren/tree 语义统一（不信任库内可能脏的 is_leaf）。
-     *
-     * @param vos 区划 VO 列表
-     */
     private void applyActualIsLeaf(List<? extends RegionVO> vos) {
         if (vos == null || vos.isEmpty()) {
             return;
         }
-        List<GeoRegion> probe = new ArrayList<>(vos.size());
-        for (RegionVO vo : vos) {
-            if (vo == null || vo.getId() == null) {
-                continue;
-            }
-            GeoRegion r = new GeoRegion();
-            r.setId(vo.getId());
-            probe.add(r);
-        }
+        List<GeoRegion> probe = vos.stream()
+                .filter(vo -> vo != null && vo.getId() != null)
+                .map(vo -> {
+                    GeoRegion r = new GeoRegion();
+                    r.setId(vo.getId());
+                    return r;
+                })
+                .toList();
         Map<Long, Integer> counts = countChildMap(probe);
-        for (RegionVO vo : vos) {
-            if (vo == null || vo.getId() == null) {
-                continue;
-            }
-            vo.setIsLeaf(counts.getOrDefault(vo.getId(), 0) == 0);
-        }
+        vos.stream()
+                .filter(vo -> vo != null && vo.getId() != null)
+                .forEach(vo -> vo.setIsLeaf(counts.getOrDefault(vo.getId(), 0) == 0));
     }
 
-    /**
-     * 将区划实体公共字段填入 VO（含 displayName）。
-     * <p>isLeaf 默认先按库字段占位；listChildren/tree/path/search 在组装后按实子覆盖。</p>
-     *
-     * @param vo   目标 VO
-     * @param r    源实体
-     * @param lang 语言偏好
-     */
     private void fillRegion(RegionVO vo, GeoRegion r, String lang) {
         vo.setId(r.getId());
         vo.setParentId(r.getParentId());
@@ -402,20 +242,52 @@ public class GeoServiceImpl implements GeoService {
         vo.setLevel(r.getLevel());
         vo.setRegionType(r.getRegionType());
         vo.setPath(r.getPath());
-        vo.setIsLeaf(r.getIsLeaf() != null && r.getIsLeaf() == 1);
+        vo.setIsLeaf(Objects.equals(r.getIsLeaf(), 1));
     }
 
-    /**
-     * 去掉首尾空白；空白串视为 null。
-     *
-     * @param value 原始字符串
-     * @return trim 后非空串，或 null
-     */
-    private String trimToNull(String value) {
-        if (!StringUtils.hasText(value)) {
+    private static void requirePositiveId(Long id) {
+        if (id == null || id <= 0) {
+            throw new BizException(ErrorCode.PARAM_INVALID);
+        }
+    }
+
+    private static String requireIso2(String countryCode) {
+        if (!StringUtils.hasText(countryCode) || countryCode.trim().length() != 2) {
+            throw new BizException(ErrorCode.PARAM_INVALID);
+        }
+        return countryCode.trim().toUpperCase();
+    }
+
+    private static String requireSearchKeyword(String keyword) {
+        if (!StringUtils.hasText(keyword) || keyword.trim().length() > 64) {
+            throw new BizException(ErrorCode.PARAM_INVALID);
+        }
+        String kw = keyword.trim();
+        if (kw.length() < 2 || kw.indexOf('%') >= 0 || kw.indexOf('_') >= 0) {
+            throw new BizException(ErrorCode.PARAM_INVALID);
+        }
+        return kw;
+    }
+
+    private static int resolveLimit(Integer limit) {
+        int lim = limit == null ? 20 : limit;
+        if (lim < 1 || lim > 100) {
+            throw new BizException(ErrorCode.PARAM_INVALID);
+        }
+        return lim;
+    }
+
+    private static String normalizeCountryKeyword(String keyword) {
+        if (!StringUtils.hasText(keyword)) {
             return null;
         }
-        String trimmed = value.trim();
-        return trimmed.isEmpty() ? null : trimmed;
+        String kw = keyword.trim();
+        if (kw.isEmpty()) {
+            return null;
+        }
+        if (kw.length() > 64 || kw.indexOf('%') >= 0 || kw.indexOf('_') >= 0) {
+            throw new BizException(ErrorCode.PARAM_INVALID);
+        }
+        return kw.length() == 2 ? kw.toUpperCase() : kw;
     }
 }
