@@ -4,20 +4,17 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.StringUtils;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
 /**
  * 物化路径解析工具（GEO-001 / platform-geo-service）。
- * <p>将 geo_region.path（如 {@code /1/200000001/300000010/}）拆成自根到叶的 ID 列表，
- * 供祖先链回显与搜索 fullPathName 组装。非法数字片段跳过并记警告日志。</p>
+ * <p>将 geo_region.path（如 {@code /1/200000001/300000010/}）拆成自根到叶的 ID 列表。</p>
  */
 public final class PathUtil {
 
     private static final Logger log = LoggerFactory.getLogger(PathUtil.class);
 
-    /** 工具类，禁止实例化 */
     private PathUtil() {
     }
 
@@ -29,20 +26,18 @@ public final class PathUtil {
      */
     public static List<Long> parsePathIds(String path) {
         if (!StringUtils.hasText(path)) {
-            return Collections.emptyList();
+            return List.of();
         }
-        String[] parts = path.split("/");
-        List<Long> ids = new ArrayList<>();
-        for (String part : parts) {
-            if (part == null || part.isBlank()) {
-                continue;
-            }
-            try {
-                ids.add(Long.parseLong(part.trim()));
-            } catch (NumberFormatException e) {
-                log.warn("skip invalid path segment, path={}, part={}", path, part);
-            }
-        }
-        return ids;
+        return Arrays.stream(path.split("/"))
+                .filter(part -> part != null && !part.isBlank())
+                .map(String::trim)
+                .mapMulti((String part, java.util.function.Consumer<Long> sink) -> {
+                    try {
+                        sink.accept(Long.parseLong(part));
+                    } catch (NumberFormatException e) {
+                        log.warn("skip invalid path segment, path={}, part={}", path, part);
+                    }
+                })
+                .toList();
     }
 }
